--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <h1 class="animate">Hi, I'm Koppula Sree Vaishnavi</h1>
       <p class="animate delay">Frontend Intern | UI Enthusiast</p>
 
-      <a href="RCEW-223T1A0575-Koppula Sree Vaishnavi.pdf"
+      <a href="RCEW-223T1A0575-Koppula_Sree_Vaishnavi.pdf"
          class="hero-resume-btn animate delay"
          target="_blank">
          View My Resume
@@ -146,6 +146,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
