--- a/index.html
+++ b/index.html
@@ -97,19 +97,19 @@
   <div class="hobbies-container">
 
     <div class="hobby-card">
-      <img src="images/hobbies/mus.png" alt="Listening to Music">
+      <img src="images/mus.png" alt="Listening to Music">
       <h4>Listening to Music</h4>
       <p>Music helps me stay focused and relaxed while working.</p>
     </div>
 
     <div class="hobby-card">
-      <img src="images/hobbies/ui.png" alt="UI Design">
+      <img src="images/ui.png" alt="UI Design">
       <h4>UI Design</h4>
       <p>Exploring clean layouts and modern web interfaces.</p>
     </div>
 
     <div class="hobby-card">
-      <img src="images/hobbies/prog.png" alt="Learning Technology">
+      <img src="images/prog.png" alt="Learning Technology">
       <h4>Learning New Technologies</h4>
       <p>Continuously improving my frontend and programming skills.</p>
     </div>
@@ -146,6 +146,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
